2017-12-xx 0.20.0 [xxxxxxx]
  GOAL: Improve usability
  @gui
  [ ] Add a link to the user documentation to the plain empty starting page
  [ ] The 2nd click on the about button shall remove the about message
  [ ] In the diagram overview of a newly initialized database, show some help messages
  [ ] Beautify layer backgrounds - e.g. light-blue sky in root-diagram
  [ ] In new-object and new-diagram modes, draw a warning-symbol below the cursor
  [ ] in overview mode, limit the number of visible children and add scroll arrows (to be tested)
  [ ] in overview mode, add brothers and sister diagrams (and maybe aunts and uncles)
  [ ] in overview mode, allow to shift diagrams vertically
  [ ] in overview mode, allow to move diagrams horizontally
  [ ] reset-selection shall select everything if nothing is selected
  [ ] the type-dropdown box shall appear over the window - without this nasty scrolling
  @gui+ctrl
  [ ] When undoing/redoing things, switch to a diagram where you see the changes
  @pencil
  [ ] In COMMENTS/notes, show not the title but the description

  + Ctrl-X/C/V,DEL work as expected during text editing
  + Pink-select elements only at the second click
2017-12-10 0.19.0 [221effc]
  + The default-names of new classifiers match their type
  + default-types of new objects fit to the diagram type and to the origin-classifier type now.
  + default-names of new objects are unique, no duplicate name errors unless forced
  + In new object mode, clicking into a possible parent classifiers creates a new child (depending on type)
  + children of CONTAINMENT relations are automatically embraced by _any_ ancestor
  + nicer layout when parents embrace CONTAINED children
  + Easier selection of the right relation in GUI_SKETCH_TOOLS_EDIT mode
  + Easier selection of classifiers in GUI_SKETCH_TOOLS_CREATE_OBJECT mode
  + Nicer layout: space area shall depend on the classifier type
2017-11-05 0.18.0 [2ac058e]
  + parent classifiers can contain children