@@ -2,7 +2,6 @@
   GOAL: Improve usability
   @gui
   [ ] Add a link to the user documentation to the plain empty starting page
-  [ ] The 2nd click on the about button shall remove the about message
   [ ] In the diagram overview of a newly initialized database, show some help messages
   [ ] Beautify layer backgrounds - e.g. light-blue sky in root-diagram
   [ ] In new-object and new-diagram modes, draw a warning-symbol below the cursor
@@ -17,6 +16,8 @@
   @pencil
   [ ] In COMMENTS/notes, show not the title but the description
 
+  + link to the home page is added in the man page
+  + The 2nd click on the about button removes the about message
   + Ctrl-X/C/V,DEL work as expected during text editing
   + Pink-select elements only at the second click
 2017-12-10 0.19.0 [221effc]
